[workspace]
[package]
version = "0.1.0"
name = "sp1-script"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
sp1-core = { git = "https://github.com/succinctlabs/sp1.git", rev = "4551cd6daf9428db36b5fabc3f46acb379ba9e22" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "4551cd6daf9428db36b5fabc3f46acb379ba9e22" }
hex = "0.4.3"
bincode = "1.3.3"